[package]
name = "he-comparisons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"
lazy_static = "1"
elgamal_ristretto = { git = "https://github.com/kevinlewi/elgamal" }
rand_core = { version = "0.5.1", default-features = false }
sha2 = "0.8.0"
clear_on_drop = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1"
concrete = { version = "0.2.0", features = [ "booleans", "integers", "serde" ] }
libpaillier = "0.4"

[[bench]]
name = "comparisons"
harness = false